styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
:root {
    --primary-color: #7C3AED;
    --off-white: #F3F4F6;
    --dark-gray: #6B7280;
}

body {
    font-family: 'Montserrat', sans-serif;
    margin: 0px;
}

hr {
    margin: 2rem 0rem;
}

/* spaces */

.margin-md {
    margin: 2rem;
}

/* container */

.container {
    padding: 0rem 1rem;
}

.container-center {
    max-width: 600px;
    margin: auto;
}

/* links */

.link {
    box-sizing: border-box;
    text-decoration: none;
    padding: 0.5rem 1rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.link-primary {
    background-color: var(--primary-color);
    color: white;
    border-radius: 0.5rem;
}

.link-secondary {
    border-radius: 0.5rem;
    color: var(--primary-color);
    border: 1px solid var(--primary-color);
}

/* lists */

.list-non-bullet {
    list-style: none;
}

.list-item-inline {
    display: inline;
    padding: 0rem 0.5rem;
}

/* navigation */

.navigation {
    background-color: var(--primary-color);
    color: white;
    padding: 1rem;
    border-bottom-left-radius: 1rem;
}

.navigation .nav-brand {
    font-weight: bold;
    font-size: 1.1rem;
}

.navigation .nav-pills {
    text-align: right;
}

.navigation .link {
    color: white;
}

.navigation .link-active {
    font-weight: bold;
}

/* header */

.hero {
    padding: 2rem;
    padding-top: 5rem;
}

.hero .hero-img {
    max-width: 350px;
    display: block;
    margin: auto;
}

.hero .hero-heading {
    color: var(--dark-gray);
    text-align: center;
}

/* sections */

.section {
    padding: 2rem;
}

.section h1 {
    text-align: center;
}

.ow {
    background-color: var(--off-white);
}

.padding-div {
    padding: 2rem;
}

/* footer */

.footer {
    background-color: var(--primary-color);
    padding: 2rem 1rem;
    text-align: center;
    color: white;
    border-top-right-radius: 1rem;
}

.footer .link {
    color: white;
}

.footer ul {
    padding-inline-start: 0px;
}

.footer .footer-header {
    font-weight: bold;
    font-size: large;
}

/* img section */

.img-section {
    padding: 1rem 0rem;
}

.img-section .section-img {
    max-width: 600px;
    display: block;
    margin: auto;
}

code {
    display: block;
}

textarea {
    width: 100%!important;
    white-space: pre;
}

/* media queries */

@media screen and (max-width: 480px) {
    li>.container {
        padding: 0;
    }
    li>.container-center {
    max-width: 100%;
    margin: auto;
}
.container-center>p,h1{
    word-wrap: break-word;
}
    .list-item-inline {
        display: inline;
        padding: 0rem 0.1rem;
    }
    .link {
        box-sizing: border-box;
        text-decoration: none;
        padding: 0.25rem 0.5rem;
        margin-top: 1rem;
        margin-bottom: 1rem;
    }
    .img-section {
        padding: 1rem 0rem;
    }
    .img-section .section-img {
        max-width: 100%;
        display: block;
        margin: auto;
    }
}

@media screen and (max-width: 360px) {
    li>.container {
        padding: 0;
    }
    li>.container-center {
    max-width: 100%;
    margin: auto;
}
.container-center>p,h1{
    word-wrap: break-word;
}
    .list-item-inline {
        display: inline;
        padding: 0rem 0.1rem;
    }
    .link {
        box-sizing: border-box;
        text-decoration: none;
        padding: 0.2rem 0.4rem;
        margin-top: 1rem;
        margin-bottom: 1rem;
    }
    .img-section {
        padding: 1rem 0rem;
    }
    .img-section .section-img {
        max-width: 100%;
        display: block;
        margin: auto;
    }
}

